syntax = "proto3";

option csharp_namespace = "AElf.Miner.Rpc";
import "hash.proto";

message RequestIndexedInfoMessage {
    uint64 NextHeight = 1;
}

message ResponseIndexedInfoMessage {
    uint64 Height = 1;
    Hash BlockHeaderHash = 2;
    Hash TransactionMKRoot = 3;
    bool Success = 4;
}

service HeaderInfoRpc {
    rpc Index (stream RequestIndexedInfoMessage) returns (stream ResponseIndexedInfoMessage) {}
}


